
Mon Dec 6 13:31:48 CET 2004 Paolo Molaro <lupus@ximian.com>

	* main.c: add a --filter=filename option to load a file
	with a list of types, fields, methods to disassemble.

2004-12-02  Miguel de Icaza  <miguel@ximian.com>

	* main.c: Rename compilercontrolled to privatescope

	* get.c (get_class_name): Correct implementation that correctly
	handles nested classes.

2004-11-26  Miguel de Icaza  <miguel@ximian.com>

	* main.c: Better implementation of the quote keyword, list all of
	the known keywords to ildasm here. 

	* get.c (dis_stringify_object_with_class): Take an argument
	`prefix' that controls whether the `class', `valuetype' labels are
	used.  This is needed for the catch clause that takes the type
	directly. 
	(get_method_core): Rename get_method to get_method_core, and allow
	for only part of the signature to be specified, so we can produce
	.override signatures correctly.
	(get_method_override): Pass false as the `fullsig' argument.

	(get_typedef): no longer quote the type, we quote in the call site
	elsewhere.   Avoids double quotes.
	
	* main.c (quote_keyword): Quote keywords.

Tue Nov 9 17:29:28 CET 2004 Paolo Molaro <lupus@ximian.com>

	* dis-cil.c, get.c, get.h: update to exception clause structure changes.

2004-11-08  Ben Maurer  <bmaurer@ximian.com>

	* get.c, dump.c: warning free.

2004-10-21  Jackson Harper  <jackson@ximian.com>

	* get.c: Escape typedef names.

2004-10-19    <vargaz@freemail.hu>

	* main.c: Applied patch from Alexandre Rocha Lima e Marcondes  (alexandremarcondes@psl-pr.softwarelivre.org). Really fix 2.95 build.

2004-10-04  Sebastien Pouliot  <sebastien@ximian.com>

	* dump.c: Added new "internal" security actions for non-CAS demands:
	NonCasDemand, NonCasLinkDemand and NonCasInheritance.
	* main.c: Added new "internal" security actions for non-CAS demands:
	noncasdemand, noncaslinkdemand and noncasinheritance.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* main.c: Add support for pinvoke flags BestFit and 